--- a/src/app/components/registros/inv-oficina/inv-oficina.component.html
+++ b/src/app/components/registros/inv-oficina/inv-oficina.component.html
@@ -3,23 +3,25 @@
 <div class="loading" *ngIf="loading">Loading&#8230;</div>
 <h3 class="ml-4">Monto Disponible: {{saldoDisp | currency}}</h3>
 <br>
-<table class="table">
-    <thead>
-        <tr>
-            <th *ngFor="let head of headTitle">{{head}}</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr *ngFor="let el of elements; let i of index">
-            <td>{{el.resp_asg}}</td>
-            <td>{{el.fecha}}</td>
-            <td>{{el.tipo}}</td>
-            <td style="text-align: right;">{{el.cantidad | currency }}</td>
-            <td>{{el.motivo}}</td>
-            <td>
-                <button type=" button " class="btn btn-outline-success mr-2 btn-sm" (click)="actualizar(i) "><i class="fas fa-edit "></i> Modificar</button>
-                <button type="button " class="btn btn-outline-danger btn-sm " (click)="borrar(i) "> <i class="fas fa-trash-alt "></i> Eliminar</button>
-            </td>
-        </tr>
-    </tbody>
-</table>
+<div id=tabla>
+    <table class="table">
+        <thead>
+            <tr>
+                <th *ngFor="let head of headTitle">{{head}}</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let el of elements; let i of index">
+                <td>{{el.resp_asg}}</td>
+                <td>{{el.fecha}}</td>
+                <td>{{el.tipo}}</td>
+                <td style="text-align: right;">{{el.cantidad | currency }}</td>
+                <td>{{el.motivo}}</td>
+                <td>
+                    <button type=" button " class="btn btn-outline-success mr-2 btn-sm" (click)="actualizar(i) "><i class="fas fa-edit "></i> Modificar</button>
+                    <button type="button " class="btn btn-outline-danger btn-sm " (click)="borrar(i) "> <i class="fas fa-trash-alt "></i> Eliminar</button>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+</div>
