--- a/src/app/components/altas/gastos-generales/gastos-generales.component.css
+++ b/src/app/components/altas/gastos-generales/gastos-generales.component.css
@@ -1,27 +1,3 @@
-.flex-container {
-    display: flex;
-    justify-content: space-around;
-}
-
-.card {
-    margin-left: 10% !important;
-    padding-top: 2%;
-    padding-bottom: 2%;
-}
-
-label {
-    font-weight: bold;
-    color: #202C4C;
-}
-
-button#guardar {
-    background-color: #4E936F;
-    color: white;
-    font-weight: bold;
-    border-radius: 5%;
-    margin-left: 25%;
-}
-
 input,
 select {
     border-bottom: 1px solid #ebebee;
@@ -30,4 +6,5 @@ select {
     border-right: none;
     box-shadow: transparent;
     background-color: transparent;
+    outline: none;
 }
