--- a/src/app/components/altas/gastos-generales/gastos-generales.component.html
+++ b/src/app/components/altas/gastos-generales/gastos-generales.component.html
@@ -1,72 +1,109 @@
 <navbar></navbar>
-<h1>{{ titulo }}</h1>
-<div class="m-3 col-md-10 card ">
-    <form [formGroup]="gastosForm" (ngSubmit)="onSubmit()">
+<div class="column">
+    <h1 class="center">{{ titulo }}</h1>
+    <div class="m-3 card ">
         <div class="loading" *ngIf="loading">Loading&#8230;</div>
-        <div class="flex-container">
-            <div class="col-md-5">
-                <label class="control-label" for="resp_asg">Responsable ASG: </label><br>
-                <p *ngIf="submitted && fval.resp_asg.invalid">*Este campo no puede ir vacío</p>
-                <select id="resp_asg" formControlName="resp_asg" data-toggle="tooltip" data-placement="top" title="*Campo obligatorio ">
-                    <option disabled value=''>Responsable ASG</option>
-                    <option *ngFor="let resp of usuarios ">{{resp.nombre}}</option>
-                </select>
-            </div>
-            <div>
-                <label class="control-label " for="fecha">Fecha: <span><i class="far fa-calendar-alt "></i></span> </label>
-                <p *ngIf="submitted && fval.fecha.invalid">*Este campo no puede ir vacío</p>
-                <input class="form-control" id="fecha" placeholder="Fecha" formControlName="fecha" type="date" data-toggle="tooltip " title="*Campo obligatorio ">
-            </div>
-        </div>
+        <form class="m-3" [formGroup]="gastosForm" (ngSubmit)="onSubmit()">
+            <div class="loading" *ngIf="loading">Loading&#8230;</div>
+            <div class="around">
+                <div class="col-md-8 mt-3">
+                    <div class="col-md-4">
+                        <label class="control-label " for="fecha">Fecha: <span><i class="far fa-calendar-alt "></i></span> </label>
+                        <p *ngIf="submitted && fval.fecha.invalid">*Este campo no puede ir vacío</p>
+                        <input class="form-control" id="fecha" placeholder="Fecha" formControlName="fecha" type="date" data-toggle="tooltip " title="*Campo obligatorio ">
 
-        <label class="control-label " for="monto ">Monto: </label>
-        <input class="form-control " id="monto" placeholder="Monto" formControlName="cantidad" type="text" data-toggle="tooltip " title="*Campo obligatorio " (keyup)="checkNumeros($event) " [ngClass]="{ 'is-invalid': submitted && fval.cantidad.errors
-                    } ">
-        <br>
-        <label class="control-label" for="motivo">Motivo: </label>
-        <input class="form-control" id="motivo" placeholder="Motivo" formControlName="motivo" type="text" data-toggle="tooltip" title="*Campo obligatorio " (keyup)="checkL_N($event) " [ngClass]="{ 'is-invalid': submitted && fval.motivo.errors } ">
-        <br/>
-
-        <div class=" flex-container ">
-            <div>
-                <label class="control-label mr-2 " for="tipo_gasto">Tipo gasto:</label><br>
-                <p *ngIf="submitted && fval.tipo_gasto.invalid">*Este campo no puede ir vacío</p>
-                <select id="tipo_gasto" formControlName="tipo_gasto">
+                    </div>
+                </div>
+                <div class="col-md-3 mt-3">
+                    <label class="control-label mr-2" for="tipo_gasto">Tipo gasto:</label><br>
+                    <p *ngIf="submitted && fval.tipo_gasto.invalid">*Este campo no puede ir vacío</p>
+                    <select id="tipo_gasto" formControlName="tipo_gasto">
                 <option disabled value=''>Tipo gasto</option>
-                <option value="Clientes">Clientes</option>
-                <option value="Empresa">Empresa</option>
-                <option value="Hardware">Hardware</option>
-                <option value="Papeleria">Papeleria</option>
-                <option value="Software">Software</option>
-                <option value="Otros">Otros</option>
-              </select></div>
-            <div>
-                <label class="control-label mr-2 " for="proyecto">Proyecto:</label><br>
-                <p *ngIf="submitted && fval.proyecto.invalid">*Este campo no puede ir vacío</p>
-                <select id="proyecto" formControlName="proyecto">
+                <option *ngFor="let gto of tipoGto " >{{gto.gasto}}</option>
+              </select>
+                </div>
+            </div>
+            <div class="mt-3">
+                <label class="control-label " for="monto ">Monto: </label>
+                <input class="form-control " id="monto" placeholder="Monto" formControlName="cantidad" type="text" data-toggle="tooltip " title="*Campo obligatorio " (keyup)="checkNumeros($event) " [ngClass]="{ 'is-invalid': submitted && fval.cantidad.errors } ">
+            </div>
+            <div class="mt-3">
+                <label class="control-label" for="motivo">Motivo: </label>
+                <input class="form-control" id="motivo" placeholder="Motivo" formControlName="motivo" type="text" data-toggle="tooltip" title="*Campo obligatorio " (keyup)="checkL_N($event) " [ngClass]="{ 'is-invalid': submitted && fval.motivo.errors } ">
+            </div>
+
+            <div class="around">
+                <div class="col-md-3 mt-3">
+                    <label class="control-label mr-2 " for="proyecto">Proyecto:</label><br>
+                    <p *ngIf="submitted && fval.proyecto.invalid">*Este campo no puede ir vacío</p>
+                    <select id="proyecto" formControlName="proyecto">
                     <option disabled class="col-md-8 " value=''>Proyecto</option>
                     <option *ngFor="let proyecto of proyectos">{{proyecto.nombre}}</option>
                   </select></div>
-            <div>
-                <label class="control-label mr-2 " for="estatus">Estatus:</label><br>
-                <p *ngIf="submitted && fval.estatus.invalid">*Este campo no puede ir vacío</p>
-                <select id="estatus" formControlName="estatus">
+                <div class="col-md-3 mt-3">
+                    <label class="control-label mr-2 " for="estatus">Estatus:</label><br>
+                    <p *ngIf="submitted && fval.estatus.invalid">*Este campo no puede ir vacío</p>
+                    <select id="estatus" formControlName="estatus">
                     <option disabled value=''>Estatus</option>
                     <option value="Pendiente">Pentiente</option>
                     <option value="Pagado">Pagado</option>
                     <option value="Incompleto">Incompleto</option>
                     <option value="Cancelado">Cancelado</option>
                   </select>
+                </div>
+                <div class="col-md-3 mt-3">
+                    <label class="control-label">Reembolso: </label><br>
+                    <label class="switch">
+                    <input type="checkbox" name="check" id="check" formControlName="reembolso">
+                    <span class="slider round"></span>
+                  </label>
+                </div>
+
             </div>
-        </div>
-        <br>
-        <div *ngIf="actualizar" class="center">
-            <button type="button" id="cancelar" class="btn btn-outline-danger mr-4" (click)="regresar()"><i class="fas fa-times"></i>
-                Cancelar</button>
-            <button type="submit" id="eliminar" class="btn btn-outline-warning"><i class="fas fa-sync-alt"></i>
-                    Actualizar</button>
-        </div>
-        <button *ngIf="!actualizar" type="submit" id="guardar" class="col-md-5"><i class="fas fa-cloud-download-alt"></i>
-        {{boton}}</button>
-    </form>
+            <div class="mt-5 between">
+                <div class="drop-img mt-3 col-md-5">
+                    <div appNgDropFiles [archivos]="archivos" (mouseSobre)="estaSobreElemento = $event; cargarArchivos()" [ngClass]="{ 'file-over': estaSobreElemento }" class="well drop-zone">
+                        <h4>Arrastrar archivos</h4>
+                        <img src="../../../assets/img/drop-images.png" alt="drop-images">
+                    </div>
+                    <br>
+                </div>
+                <br>
+                <div class="mt-3 col-md-5" *ngIf="archivos.length > 0">
+                    <table id="tabla">
+                        <thead>
+                            <tr>
+                                <th *ngFor="let ht of headTitle"> {{ht}}</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr *ngFor="let archivo of archivos" (change)="guardarArchivos(archivos)">
+                                <td [ngClass]="{'text-green': archivo.progreso >= 100}">{{archivo.nombreArchivo}} </td>
+                                <td>
+                                    <div class="progress">
+                                        <div class="progress-bar mr-2" role="progressbar" [ngStyle]="{'width': archivo.progreso + '%'}" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                                    </div>
+                                    <i class="fas fa-times btn-outline-danger" (click)="limpiarArchivos(archivo)"></i>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+            <br>
+            <div *ngIf="actualizar" class="center mt-3">
+                <button type="button" id="cancelar" class="btn btn-outline-danger mr-4" (click)="regresar()"><i class="fas fa-times"></i>
+                    Cancelar</button>
+                <button type="submit" id="eliminar" class="btn btn-outline-warning"><i class="fas fa-sync-alt"></i>
+                        Actualizar</button>
+            </div>
+
+            <div class="center mt-3">
+                <button #guardar *ngIf="!actualizar" type="submit" id="guardar" class="col-md-5"><i class="fas fa-cloud-download-alt"></i>
+                    {{boton}}</button>
+            </div>
+        </form>
+
+    </div>
+
 </div>
