--- a/src/app/components/altas/proyectos/proyectos.component.css
+++ b/src/app/components/altas/proyectos/proyectos.component.css
@@ -1,36 +1,3 @@
-.flex-container {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-}
-
-.card {
-    margin-left: 10% !important;
-    padding-top: 2%;
-    padding-bottom: 2%;
-}
-
-.seleccionador {
-    width: 200px;
-}
-
-.seleccionadorResp {
-    width: 200px;
-}
-
-label {
-    font-weight: bold;
-    color: #202C4C;
-}
-
-button#guardar {
-    background-color: #4E936F;
-    color: white;
-    font-weight: bold;
-    border-radius: 5%;
-    margin-left: 25%;
-}
-
 input,
 select {
     border-bottom: 1px solid #ebebee;
@@ -39,4 +6,9 @@ select {
     border-right: none;
     box-shadow: transparent;
     background-color: transparent;
+    outline: none;
+}
+
+.seleccionador {
+    width: 150px;
 }
