--- a/src/app/components/altas/proyectos/proyectos.component.html
+++ b/src/app/components/altas/proyectos/proyectos.component.html
@@ -1,55 +1,45 @@
 <navbar></navbar>
-<h1 class="center">{{ titulo }}</h1>
-<div class="m-3 col-md-10 card ">
-    <div class="loading" *ngIf="loading">Loading&#8230;</div>
-    <form [formGroup]="proyectosForm" (ngSubmit)="onSubmit()">
-        <div class="flex-container">
-            <div class="col-md-5 mt-3">
-                <label class="control-label" for="nombre">Nombre: </label>
-                <input class="form-control" id="nombre" placeholder="Nombre" formControlName="nombre" type="text" data-toggle="tooltip" data-placement="top" title="*Campo obligatorio" (keyup)="checkLetras($event)" [ngClass]="{ 'is-invalid': submitted && fval.nombre.errors }">
+<div class="column">
+    <h1 class="center">{{ titulo }}</h1>
+    <div class="m-3 card ">
+        <div class="loading" *ngIf="loading">Loading&#8230;</div>
+        <form class="m-3" [formGroup]="proyectosForm" (ngSubmit)="onSubmit()">
+            <div class="around">
+                <div class="mt-3 col-md-4">
+                    <label class="control-label" for="fechaini">Fecha Inicio: <span><i class="far fa-calendar-alt "></i></span> </label>
+                    <input class="form-control" id="fechaini" placeholder="Fecha" formControlName="fechaini" type="date" data-toggle="tooltip " title="*Campo obligatorio ">
+                    <p *ngIf="submitted && fval.fechaini.invalid" class="mt-2">*Este campo no puede ir vacío</p>
+                </div>
+                <br>
+                <div class="mt-3 col-md-4">
+                    <label class="control-label " for="fechafin">Fecha Cierre: <span><i class="far fa-calendar-alt "></i></span> </label>
+                    <input class="form-control " id="fechafin" placeholder="Fecha" formControlName="fechafin" type="date" data-toggle="tooltip " title="*Campo obligatorio ">
+                    <p *ngIf="submitted && fval.fechafin.invalid" class="mt-2">*Este campo no puede ir vacío</p>
+                </div>
             </div>
-            <div class="col-md-5 mt-3">
-                <label class="control-label" for="descripcion">Descripción: </label>
-                <input class="form-control " id="descripcion" placeholder="Descripción" formControlName="descripcion" type="text" data-toggle="tooltip" data-placement="top" title="*Campo obligatorio" (keyup)="checkLetras($event)" [ngClass]="{ 'is-invalid': submitted && fval.descripcion.errors }">
+            <div class="around">
+                <div class="col-md-4 mt-3">
+                    <label class="control-label" for="monto_p">Monto Presupuestado: </label>
+                    <input class="form-control " id="monto_p" placeholder="Monto Presupuestado" formControlName="monto_p" type="text" data-toggle="tooltip" data-placement="top" title="*Campo obligatorio" (keyup)="checkNumeros($event)" [ngClass]="{ 'is-invalid': submitted && fval.monto_p.errors }">
+                </div>
+                <br>
+                <div class="col-md-4 mt-3">
+                    <label class="control-label" for="tipo_proyecto">Tipo de proyecto: </label>
+                    <input class="form-control" id="tipo_proyecto" placeholder="Tipo de proyecto" formControlName="tipo_proyecto" type="text" data-toggle="tooltip" data-placement="top" title="*Campo obligatorio" (keyup)="checkLetras($event)" [ngClass]="{ 'is-invalid': submitted && fval.tipo_proyecto.errors }">
+                </div>
             </div>
-        </div>
-        <div class="flex-container mt-3">
-            <div class="mt-2 col-md-5">
-                <label class="control-label" for="fechaini">Fecha Inicio: <span><i class="far fa-calendar-alt "></i></span> </label>
-                <input class="form-control" id="fechaini" placeholder="Fecha" formControlName="fechaini" type="date" data-toggle="tooltip " title="*Campo obligatorio ">
-                <p *ngIf="submitted && fval.fechaini.invalid" class="mt-2">*Este campo no puede ir vacío</p>
-            </div>
-            <br>
-            <div class="mt-2 col-md-5">
-                <label class="control-label " for="fechafin">Fecha Cierre: <span><i class="far fa-calendar-alt "></i></span> </label>
-                <input class="form-control " id="fechafin" placeholder="Fecha" formControlName="fechafin" type="date" data-toggle="tooltip " title="*Campo obligatorio ">
-                <p *ngIf="submitted && fval.fechafin.invalid" class="mt-2">*Este campo no puede ir vacío</p>
-            </div>
-        </div>
-        <div class="flex-container mt-3">
-            <div class="col-md-5 mt-3">
-                <label class="control-label" for="monto_p">Monto Presupuestado: </label>
-                <input class="form-control " id="monto_p" placeholder="Monto Presupuestado" formControlName="monto_p" type="text" data-toggle="tooltip" data-placement="top" title="*Campo obligatorio" (keyup)="checkNumeros($event)" [ngClass]="{ 'is-invalid': submitted && fval.monto_p.errors }">
-            </div>
-            <br>
-            <div class="col-md-5 mt-3">
-                <label class="control-label" for="tipo_proyecto">Tipo de proyecto: </label>
-                <input class="form-control" id="tipo_proyecto" placeholder="Tipo de proyecto" formControlName="tipo_proyecto" type="text" data-toggle="tooltip" data-placement="top" title="*Campo obligatorio" (keyup)="checkLetras($event)" [ngClass]="{ 'is-invalid': submitted && fval.tipo_proyecto.errors }">
-            </div>
-        </div>
-        <br>
-        <div class="flex-container">
-            <div class="mt-3 col-md-5">
-                <label class="control-label" for="cliente">Cliente:</label><br>
-                <select id="cliente" class="seleccionador mt-2" formControlName="cliente">
-                    <option disabled value=''>Cliente</option>
-                    <option *ngFor="let cte of clientes">{{cte.nombre}}</option>
-                 </select>
-                <p *ngIf="submitted && fval.cliente.invalid" class="mt-2">*Este campo no puede ir vacío</p>
-            </div>
-            <div class=" mt-3 col-md-5">
-                <label class="control-label mr-2 mt-1" for="estatus">Estatus:</label><br>
-                <select id="estatus" class="seleccionador" formControlName="estatus">
+            <div class="around">
+                <div class="col-md-3 mt-3">
+                    <label class="control-label" for="nombre">Nombre: </label>
+                    <input class="form-control" id="nombre" placeholder="Nombre" formControlName="nombre" type="text" data-toggle="tooltip" data-placement="top" title="*Campo obligatorio" (keyup)="checkLetras($event)" [ngClass]="{ 'is-invalid': submitted && fval.nombre.errors }">
+                </div>
+                <div class="col-md-3 mt-3">
+                    <label class="control-label" for="descripcion">Descripción: </label>
+                    <input class="form-control " id="descripcion" placeholder="Descripción" formControlName="descripcion" type="text" data-toggle="tooltip" data-placement="top" title="*Campo obligatorio" (keyup)="checkLetras($event)" [ngClass]="{ 'is-invalid': submitted && fval.descripcion.errors }">
+                </div>
+                <div class=" mt-3 col-md-3">
+                    <label class="control-label mr-3 mt-3" for="estatus">Estatus:</label> <br>
+                    <select id="estatus" class="seleccionador" formControlName="estatus">
                                 <option disabled value=''>Estatus</option>
                                 <option value="activo">Activo</option>
                                 <option value="cancelado">Cancelado</option>
@@ -57,48 +47,80 @@
                                 <option value="pausado">Pausado</option>
                                 <option value="pendiente">Pentiente</option>
                 </select>
-                <p *ngIf="submitted && fval.estatus.invalid" class="mt-2">*Este campo no puede ir vacío</p>
+                    <p *ngIf="submitted && fval.estatus.invalid" class="mt-2">*Este campo no puede ir vacío</p>
+                </div>
             </div>
-        </div>
-        <br>
-        <div class="flex-container">
-            <div class="mt-3 col-md-5">
-                <label class="control-label" for="resp_cte">Responsable Cliente:</label>
-                <input class="form-control" id="resp_cte" placeholder="Responsable Cliente" formControlName="resp_cte" type="text" data-toggle="tooltip" data-placement="top" title="*Campo obligatorio" (keyup)="checkLetras($event)" [ngClass]="{ 'is-invalid': submitted && fval.resp_cte.errors }">
-            </div>
-            <br>
-            <div class="mt-3 col-md-5">
-                <label class="control-label" for="resp_asg">Responsable ASG:</label><br>
-                <select id="resp_asg" class="seleccionador mt-2" formControlName="resp_asg">
+
+            <div class="around">
+                <div class="mt-3 col-md-3">
+                    <div class="">
+                        <div>
+                            <label class="control-label mr-3 mt-3">Cliente: </label>
+                            <label class="switch mt-3 mr-5">
+                                    <input type="checkbox" name="check" id="check" value="true" checked onchange="javascript:showContent()" >
+                                    <span class="slider round"></span>
+                                  </label>
+                        </div>
+                        <div>
+                            <div id="op1_true">
+                                <select id="cliente" formControlName="cliente">
+                                <option disabled value=''>Externo</option>
+                                <option *ngFor="let cte of clientes">{{cte.nombre}}</option>
+                             </select>
+                            </div>
+                            <div id="op2_true" style="display: none;">
+                                <select id="cliente" formControlName="cliente">
+                                <option disabled value=''>Interno</option>
+                                <option *ngFor="let cte of clientes">{{cte.nombre}}</option>
+                             </select>
+                            </div>
+                        </div>
+                    </div>
+                    <p *ngIf="submitted && fval.cliente.invalid" class="mt-2">*Este campo no puede ir vacío</p>
+                </div>
+
+                <div class="mt-3 col-md-3">
+                    <label class="control-label" for="resp_cte">Responsable Cliente:</label>
+                    <input class="form-control" id="resp_cte" placeholder="Responsable Cliente" formControlName="resp_cte" type="text" data-toggle="tooltip" data-placement="top" title="*Campo obligatorio" (keyup)="checkLetras($event)" [ngClass]="{ 'is-invalid': submitted && fval.resp_cte.errors }">
+                </div>
+                <br>
+                <div class="mt-3 col-md-3">
+                    <label class="control-label" for="resp_asg">Responsable ASG:</label><br>
+                    <select id="resp_asg" class="seleccionador mt-2" formControlName="resp_asg">
                         <option disabled value=''>Responsable ASG</option>
                         <option *ngFor="let usuario of usuarios">{{usuario.nombre}}</option>
                 </select>
-                <p *ngIf="submitted && fval.resp_asg.invalid" class="mt-2">*Este campo no puede ir vacío</p>
+                    <p *ngIf="submitted && fval.resp_asg.invalid" class="mt-2">*Este campo no puede ir vacío</p>
+                </div>
             </div>
-        </div>
-        <div class="flex-container mt-3">
-            <div class="mt-3 col-md-5">
-                <label class="control-label" for="id_act">ID Actividad: </label>
-                <input class="form-control " id="id_act" placeholder="ID Actividad" formControlName="id_act" type="text" data-toggle="tooltip" data-placement="top" title="*Campo obligatorio" (keyup)="checkCaracteres($event)" [ngClass]="{ 'is-invalid': submitted && fval.id_act.errors }">
+            <div class="around">
+                <div class="mt-3 col-md-3">
+                    <label class="control-label" for="id_act">ID Actividad: </label>
+                    <input class="form-control " id="id_act" placeholder="ID Actividad" formControlName="id_act" type="text" data-toggle="tooltip" data-placement="top" title="*Campo obligatorio" (keyup)="checkCaracteres($event)" [ngClass]="{ 'is-invalid': submitted && fval.id_act.errors }">
+                </div>
+                <div class="mt-3 col-md-3">
+                    <label class="control-label" for="proceso">Proceso: </label>
+                    <input class="form-control " id="proceso" placeholder="Proceso" formControlName="proceso" type="text" data-toggle="tooltip" data-placement="top" title="*Campo obligatorio" (keyup)="checkCaracteres($event)" [ngClass]="{ 'is-invalid': submitted && fval.proceso.errors }">
+                </div>
+                <div class="mt-3 col-md-3">
+                    <label class="control-label" for="desc_act">Descripción Actividad: </label>
+                    <input class="form-control " id="desc_act" placeholder="Descripción Actividad" formControlName="desc_act" type="text" data-toggle="tooltip" data-placement="top" title="*Campo obligatorio" (keyup)="checkCaracteres($event)" [ngClass]="{ 'is-invalid': submitted && fval.desc_act.errors }">
+                </div>
             </div>
-            <div class="mt-3 col-md-5">
-                <label class="control-label" for="proceso">Proceso: </label>
-                <input class="form-control " id="proceso" placeholder="Proceso" formControlName="proceso" type="text" data-toggle="tooltip" data-placement="top" title="*Campo obligatorio" (keyup)="checkCaracteres($event)" [ngClass]="{ 'is-invalid': submitted && fval.proceso.errors }">
+
+            <br>
+            <br>
+            <div *ngIf="actualizar" class="center">
+                <button type="button" id="cancelar" class="btn btn-outline-danger mr-4" (click)="regresar()"><i class="fas fa-times"></i>
+                    Cancelar</button>
+                <button type="submit" id="eliminar" class="btn btn-outline-warning"><i class="fas fa-sync-alt"></i>
+                        Actualizar</button>
             </div>
-        </div>
-        <div class="mt-4 col-md-12">
-            <label class="control-label" for="desc_act">Descripción Actividad: </label>
-            <input class="form-control " id="desc_act" placeholder="Descripción Actividad" formControlName="desc_act" type="text" data-toggle="tooltip" data-placement="top" title="*Campo obligatorio" (keyup)="checkCaracteres($event)" [ngClass]="{ 'is-invalid': submitted && fval.desc_act.errors }">
-        </div>
-        <br>
-        <br/>
-        <div *ngIf="actualizar" class="center">
-            <button type="button" id="cancelar" class="btn btn-outline-danger mr-4" (click)="regresar()"><i class="fas fa-times"></i>
-                Cancelar</button>
-            <button type="submit" id="eliminar" class="btn btn-outline-warning"><i class="fas fa-sync-alt"></i>
-                    Actualizar</button>
-        </div>
-        <button *ngIf="!actualizar" type="submit" id="guardar" class="col-md-5"><i class="fas fa-cloud-download-alt"></i>
-        {{boton}}</button>
-    </form>
+
+            <div class="center">
+                <button #guardar *ngIf="!actualizar" type="submit" id="guardar" class="col-md-5"><i class="fas fa-cloud-download-alt"></i>
+                    {{boton}}</button>
+            </div>
+        </form>
+    </div>
 </div>
