--- a/src/app/components/registros/inv-clientes/inv-clientes.component.html
+++ b/src/app/components/registros/inv-clientes/inv-clientes.component.html
@@ -2,22 +2,24 @@
 <h1>Registro {{titulo}}</h1>
 
 <div class="loading" *ngIf="loading">Loading&#8230;</div>
-<table class="table">
-    <thead>
-        <tr>
-            <th *ngFor="let head of headTitle">{{head}}</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr *ngFor="let el of elements; let i of index">
-            <td>{{ el.nombre }}</td>
-            <td>{{ el.puesto }}</td>
-            <td>{{ el.empresa }}</td>
-            <td>{{ el.celular }}</td>
-            <td>
-                <button type="button" class="btn btn-outline-success mr-2 btn-sm" (click)="actualizar(i)"><i class="fas fa-edit"></i> Modificar</button>
-                <button type="button" class="btn btn-outline-danger btn-sm" (click)="borrar(i)"> <i class="fas fa-trash-alt"></i> Eliminar</button>
-            </td>
-        </tr>
-    </tbody>
-</table>
+<div id="tabla">
+    <table class="table">
+        <thead>
+            <tr>
+                <th *ngFor="let head of headTitle">{{head}}</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let el of elements; let i of index">
+                <td class="left">{{el.ap_p}} {{el.ap_m}} {{el.nombre}}</td>
+                <td class="left">{{ el.puesto }}</td>
+                <td class="left">{{ el.empresa }}</td>
+                <td class="left">{{ el.celular }}</td>
+                <td class="center">
+                    <button type="button" class="btn btn-outline-success mr-2 btn-sm" (click)="actualizar(i)"><i class="fas fa-edit"></i> Modificar</button>
+                    <button type="button" class="btn btn-outline-danger btn-sm" (click)="borrar(i)"> <i class="fas fa-trash-alt"></i> Eliminar</button>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+</div>
