--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -4,7 +4,7 @@
         <div id="sidenav" class="sidenav">
             <!-- <a href="javascript:void(0)" id='closebtn' class="closebtn" onclick="closeNav()">&times;</a> -->
             <div class="acordeon">
-                <img src="../../../assets/img/logo.png" width="100%" height="15%">
+                <img id="logo" src="../../../assets/img/logo.png">
                 <div class="acordeon__item">
                     <input type="radio" name="acordeon" id="item1">
                     <label for="item1" class="acordeon__titulo">Registrar</label>
