--- a/src/app/components/altas/proyectos/proyectos.component.html
+++ b/src/app/components/altas/proyectos/proyectos.component.html
@@ -8,13 +8,13 @@
                 <div class="mt-3 col-md-4">
                     <label class="control-label" for="fechaini">Fecha Inicio: <span><i class="far fa-calendar-alt "></i></span> </label>
                     <input class="form-control" id="fechaini" placeholder="Fecha" formControlName="fechaini" type="date" data-toggle="tooltip " title="*Campo obligatorio ">
-                    <p *ngIf="submitted && fval.fechaini.invalid" class="mt-2">*Este campo no puede ir vacío</p>
+                    <p #error id="error" *ngIf="submitted && fval.fechaini.invalid" class="mt-2">*Este campo no puede ir vacío</p>
                 </div>
                 <br>
                 <div class="mt-3 col-md-4">
                     <label class="control-label " for="fechafin">Fecha Cierre: <span><i class="far fa-calendar-alt "></i></span> </label>
                     <input class="form-control " id="fechafin" placeholder="Fecha" formControlName="fechafin" type="date" data-toggle="tooltip " title="*Campo obligatorio ">
-                    <p *ngIf="submitted && fval.fechafin.invalid" class="mt-2">*Este campo no puede ir vacío</p>
+                    <p #error id="error" *ngIf="submitted && fval.fechafin.invalid" class="mt-2">*Este campo no puede ir vacío</p>
                 </div>
             </div>
             <div class="around">
@@ -47,7 +47,7 @@
                                 <option value="pausado">Pausado</option>
                                 <option value="pendiente">Pentiente</option>
                 </select>
-                    <p *ngIf="submitted && fval.estatus.invalid" class="mt-2">*Este campo no puede ir vacío</p>
+                    <p #error id="error" *ngIf="submitted && fval.estatus.invalid" class="mt-2">*Este campo no puede ir vacío</p>
                 </div>
             </div>
 
@@ -76,7 +76,7 @@
                             </div>
                         </div>
                     </div>
-                    <p *ngIf="submitted && fval.cliente.invalid" class="mt-2">*Este campo no puede ir vacío</p>
+                    <p #error id="error" *ngIf="submitted && fval.cliente.invalid" class="mt-2">*Este campo no puede ir vacío</p>
                 </div>
 
                 <div class="mt-3 col-md-3">
@@ -90,7 +90,7 @@
                         <option disabled value=''>Responsable ASG</option>
                         <option *ngFor="let usuario of usuarios">{{usuario.nombre}}</option>
                 </select>
-                    <p *ngIf="submitted && fval.resp_asg.invalid" class="mt-2">*Este campo no puede ir vacío</p>
+                    <p #error id="error" *ngIf="submitted && fval.resp_asg.invalid" class="mt-2">*Este campo no puede ir vacío</p>
                 </div>
             </div>
             <div class="around">
