--- a/src/styles.css
+++ b/src/styles.css
@@ -26,7 +26,7 @@
         text-align: center;
     }
     
-    p {
+    p#error {
         color: #c34613;
         font-size: 10px;
     }
@@ -36,19 +36,6 @@
         width: 100%;
     }
     /* css loading */
-    
-    .loading {
-        position: fixed;
-        z-index: 999;
-        height: 2em;
-        width: 2em;
-        overflow: visible;
-        margin: auto;
-        top: 0;
-        left: 0;
-        bottom: 0;
-        right: 0;
-    }
     
     .center {
         display: flex;
@@ -69,7 +56,52 @@
         padding-top: 2%;
         padding-bottom: 2%;
     }
+    
+    select:focus {
+        border-bottom-color: #c34613 !important;
+        box-shadow: 0 1px 1px transparent !important;
+    }
+    
+    .between {
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+    }
+    
+    .around {
+        display: flex;
+        justify-content: space-around;
+        flex-wrap: wrap;
+    }
+    
+    .column {
+        display: flex;
+        flex-direction: column;
+    }
+    
+    label {
+        font-weight: bold;
+        color: #202C4C;
+    }
+    
+    .left {
+        text-align: left;
+    }
+    /*  ************************* Loading ************************* */
     /* Transparent Overlay */
+    
+    .loading {
+        position: fixed;
+        z-index: 999;
+        height: 2em;
+        width: 2em;
+        overflow: visible;
+        margin: auto;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
+    }
     
     .loading:before {
         content: '';
@@ -177,41 +209,11 @@
             transform: rotate(360deg);
         }
     }
+    /*  ************************************************************** */
     
     input:focus {
         border-bottom-color: #c34613 !important;
         box-shadow: 0 1px 1px transparent !important;
-    }
-    
-    select:focus {
-        border-bottom-color: #c34613 !important;
-        box-shadow: 0 1px 1px transparent !important;
-    }
-    
-    .between {
-        display: flex;
-        justify-content: space-between;
-        flex-wrap: wrap;
-    }
-    
-    .around {
-        display: flex;
-        justify-content: space-around;
-        flex-wrap: wrap;
-    }
-    
-    .column {
-        display: flex;
-        flex-direction: column;
-    }
-    
-    label {
-        font-weight: bold;
-        color: #202C4C;
-    }
-    
-    .left {
-        text-align: left;
     }
     /*  ************************* Switch ************************* */
     
