--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -12,6 +12,7 @@
                         <button type="button" class="btn btn-default" routerLink="/registro-clientes">Clientes</button>
                         <button type="button" class="btn btn-default" routerLink="/registro-gastos">Gastos Generales</button >
                         <button type="button" class="btn btn-default" routerLink="/registro-proyectos">Proyectos</button>
+                        <button type="button" class="btn btn-default" routerLink="/registro-reembolso">Reembolso</button >
                         <button type="button" class="btn btn-default" routerLink="/registro-usuarios">Usuarios ASG</button>
                     </div>
                 </div>
@@ -22,6 +23,7 @@
                         <button type="button" class="btn btn-default" routerLink="/clientes">Clientes</button>
                         <button type="button" class="btn btn-default" routerLink="/gastos">Gastos Generales</button >
                         <button type="button" class="btn btn-default" routerLink="/proyectos">Proyectos</button>
+                        <button type="button" class="btn btn-default" routerLink="/reembolsos">Reembolso</button >
                         <button type="button" class="btn btn-default" routerLink="/usuarios">Usuarios ASG</button>
                     </div>
                 </div>
