--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,29 +1,36 @@
-<section class="view intro intro-2 ">
-    <div class="card center">
-        <h2 class=" text-center mb-5 mt-4 font-bold"><strong>Inicio de sesión</strong></h2>
-        <!-- <div *ngIf="errorLogin" class="row mt-1 text-danger px-2"> -->
-        <!-- <h5 class="mx-2 px-2">El usuario o contraseña son incorrectos</h5> -->
-        <!-- </div> -->
-        <!-- <hr *ngIf="errorLogin"> -->
-        <div class="row pb-4 d-flex justify-content-center mb-4">
-            <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-                <div class="md-form">
-                    <mdb-icon fas icon="user" class="dark-grey-text"></mdb-icon>
-                    <input type="text" id="username" formControlName="username" class="form-control">
-                    <label for="username">Tu correo</label>
-                </div>
+<navbar hidden></navbar>
 
-                <div class="md-form">
-                    <mdb-icon fas icon="lock" class="dark-grey-text"></mdb-icon>
-                    <input type="password" id="pass" formControlName="password" class="form-control">
-                    <label for="passs">Tu contraseña</label>
+<section class="view intro intro-2 ">
+    <div class="loading" *ngIf="loading">Loading&#8230;</div>
+    <div class="card">
+        <h2 class="text-center mb-5 mt-4 font-bold"><strong>Inicio de sesión</strong></h2>
+        <div class="around">
+            <!-- <div>
+                <img src="../../assets/img/logo.png">
+            </div> -->
+            <div>
+                <div class="row pb-4 d-flex justify-content-center mb-4">
+                    <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+                        <div class="md-form">
+                            <mdb-icon fas icon="user" class="dark-grey-text mr-2"></mdb-icon> <label for="email">Correo</label>
+                            <input type="email" id="email" formControlName="email" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.email.errors }">
+                            <p id="error" *ngIf="loginForm.get('email').hasError('required')">* Este campo no puede ir vacío</p>
+                            <p id="error" class="error" *ngIf="loginForm.get('email').hasError('email')">*Correo Invalido</p>
+                        </div>
+
+                        <div class="md-form">
+                            <mdb-icon fas icon="lock" class="dark-grey-text mr-2"></mdb-icon> <label for="pass">Contraseña</label>
+                            <input type="password" id="pass" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.password.errors }">
+                            <p id="error" *ngIf="loginForm.get('password').hasError('required')">* Este campo no puede ir vacío</p>
+                            <p id="error" *ngIf="loginForm.get('password').hasError('minLength')">* Min. 6 caracteres</p>
+                        </div>
+                        <div class="text-center">
+                            <button class="">Ingresar </button><br>
+                            <a routerLink="" class="btn btn-link">Recuperar contraseña</a>
+                        </div>
+                    </form>
                 </div>
-                <div class="text-center">
-                    <button class="">Ingresar </button><br>
-                    <a routerLink="" class="btn btn-link">Recuperar contraseña</a>
-                </div>
-            </form>
+            </div>
         </div>
     </div>
-
 </section>
