--- a/src/app/components/altas/reembolso/reembolso.component.html
+++ b/src/app/components/altas/reembolso/reembolso.component.html
@@ -3,8 +3,7 @@
     <h1 class="center">{{ titulo }}</h1>
     <div class="m-3 card ">
         <div class="loading" *ngIf="loading">Loading&#8230;</div>
-        <form class="m-3" [formGroup]="gastosForm" (ngSubmit)="onSubmit()">
-            <div class="loading" *ngIf="loading">Loading&#8230;</div>
+        <form class="m-3" [formGroup]="reembolsoForm" (ngSubmit)="onSubmit()">
             <div class="around">
                 <div class="col-md-8 mt-3">
                     <div class="col-md-4">
@@ -14,83 +13,57 @@
                     </div>
                 </div>
                 <div class="col-md-3 mt-3">
-                    <label class="control-label mr-2" for="tipo_gasto">Tipo gasto:</label><br>
-                    <select id="tipo_gasto" formControlName="tipo_gasto">
-                <option disabled value=''>Tipo gasto</option>
-                <option *ngFor="let gto of tipoGto " >{{gto.gasto}}</option>
-              </select>
-                    <p id="error" *ngIf="submitted && fval.tipo_gasto.invalid">*Este campo no puede ir vacío</p>
-                </div>
-            </div>
-            <div class="mt-3">
-                <label class="control-label " for="monto ">Monto: </label>
-                <input class="form-control " id="monto" placeholder="Monto" formControlName="cantidad" type="text" data-toggle="tooltip " title="*Campo obligatorio " (keyup)="checkNumeros($event) " [ngClass]="{ 'is-invalid': submitted && fval.cantidad.errors } ">
-            </div>
-            <div class="mt-3">
-                <label class="control-label" for="motivo">Motivo: </label>
-                <input class="form-control" id="motivo" placeholder="Motivo" formControlName="motivo" type="text" data-toggle="tooltip" title="*Campo obligatorio " (keyup)="checkL_N($event) " [ngClass]="{ 'is-invalid': submitted && fval.motivo.errors } ">
-            </div>
-
-            <div class="around">
-                <div class="col-md-3 mt-3">
-                    <label class="control-label mr-2 " for="proyecto">Proyecto:</label><br>
-                    <select id="proyecto" formControlName="proyecto">
-                    <option disabled class="col-md-8 " value=''>Proyecto</option>
-                    <option *ngFor="let proyecto of proyectos">{{proyecto.nombre}}</option>
-                  </select>
-                    <p id="error" *ngIf="submitted && fval.proyecto.invalid">*Este campo no puede ir vacío</p>
-                </div>
-                <div class="col-md-3 mt-3">
-                    <label class="control-label mr-2 " for="estatus">Estatus:</label><br>
+                    <label class="control-label mr-2" for="estatus">Estatus:</label><br>
                     <select id="estatus" formControlName="estatus">
-                    <option disabled value=''>Estatus</option>
-                    <option value="Pendiente">Pentiente</option>
-                    <option value="Pagado">Pagado</option>
-                    <option value="Incompleto">Incompleto</option>
-                    <option value="Cancelado">Cancelado</option>
-                  </select>
-                    <p id="error" *ngIf="submitted && fval.estatus.invalid">*Este campo no puede ir vacío</p>
+                        <option *ngIf="nuevoR" value=''>Aprobar</option>
+                        <option value="Aprobado ">Aprobado</option>
+                        <option value="Rechazado ">Rechazado</option>
+                        <option value="Pagado ">Pagado</option>
+                        </select>
                 </div>
-                <div class="col-md-3 mt-3">
-                    <label class="control-label">Reembolso: </label><br>
-                    <label class="switch">
-                    <input type="checkbox" name="check" id="check" formControlName="reembolso">
-                    <span class="slider round"></span>
-                  </label>
-                </div>
-
             </div>
-            <div class="mt-5 between">
-                <div *ngIf="(archivos.length <=  2 )" class="drop-img mt-3 col-md-5">
-                    <div appNgDropFiles [archivos]="archivos" (mouseSobre)="estaSobreElemento = $event; cargarArchivos();" [ngClass]="{ 'file-over': estaSobreElemento }" class="well drop-zone">
+            <div class="mt-3 ">
+                <label class="control-label " for="monto ">Monto: </label>
+                <input class="form-control " id="monto " placeholder="Monto " formControlName="cantidad" type="text " data-toggle="tooltip " title="*Campo obligatorio " (keyup)="checkNumeros($event) " [ngClass]="{ 'is-invalid': submitted && fval.cantidad.errors
+                        } ">
+            </div>
+            <div class="mt-3 ">
+                <label class="control-label " for="motivo ">Motivo: </label>
+                <input class="form-control " id="motivo " placeholder="Motivo " formControlName="motivo" type="text " data-toggle="tooltip " title="*Campo obligatorio " (keyup)="checkL_N($event) " [ngClass]="{ 'is-invalid': submitted && fval.motivo.errors
+                        } ">
+            </div>
+
+            <!-- <div class="mt-5 between ">
+                <div *ngIf="(archivos.length <=2 ) " class="drop-img mt-3 col-md-5 ">
+                    <div appNgDropFiles [archivos]="archivos " (mouseSobre)="estaSobreElemento=$ event; cargarArchivos(); " [ngClass]="{ 'file-over': estaSobreElemento } " class="well drop-zone ">
                         <h4>Arrastrar archivos</h4>
-                        <img src="../../../assets/img/drop-images.png" alt="drop-images">
+                        <img src="../../../assets/img/drop-images.png " alt="drop-images ">
                     </div>
                     <br>
                 </div>
                 <br>
-                <div id="tabla">
-                    <table class="table mt-3" *ngIf="archivos.length > 0">
-                        <thead>
-                            <tr>
-                                <th *ngFor="let ht of headTitle"> {{ht}}</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr *ngFor="let archivo of archivos">
-                                <td>{{archivo.nombreArchivo}}
-                                </td>
-                                <td>
-                                    <div class="progress">
-                                        <div class="progress-bar mr-2" role="progressbar" [ngStyle]="{'width': archivo.progreso + '%'}" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                                    </div>
-                                    <i class="fas fa-times btn-outline-danger" (click)="limpiarArchivos(archivo)"></i>
-                                </td>
-                            </tr>
-                        </tbody>
+                <div id="tabla ">
+                    <table class="table mt-3 " *ngIf="archivos.length> 0">
+                    <thead>
+                        <tr>
+                            <th *ngFor="let ht of headTitle"> {{ht}}</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr *ngFor="let archivo of archivos">
+                            <td>{{archivo.nombreArchivo}}
+                            </td>
+                            <td>
+                                <div class="progress">
+                                    <div class="progress-bar mr-2" role="progressbar" [ngStyle]="{'width': archivo.progreso + '%'}" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                                </div>
+                                <i class="fas fa-times btn-outline-danger" (click)="limpiarArchivos(archivo)"></i>
+                            </td>
+                        </tr>
+                    </tbody>
                     </table>
                 </div>
-            </div>
+            </div> -->
             <br>
             <div *ngIf="actualizar" class="center mt-3">
                 <button type="button" id="cancelar" class="btn btn-outline-danger mr-4" (click)="regresar()"><i class="fas fa-times"></i>
