--- a/src/app/components/altas/registro-oficina/registro-oficina.component.html
+++ b/src/app/components/altas/registro-oficina/registro-oficina.component.html
@@ -2,46 +2,66 @@
 <h1>{{ titulo }}</h1>
 <div class="m-3 col-md-10 card ">
     <div class="loading" *ngIf="loading">Loading&#8230;</div>
-    <form [formGroup]="ofForm" (ngSubmit)="onSubmit()">
-        <div class="flex-container">
-            <div>
-                <label class="control-label" for="resp_asg">Responsable ASG: </label><br>
-                <p #error id="error" *ngIf="submitted && fval.resp_asg.invalid">*Este campo no puede ir vacío</p>
-                <select id="resp_asg" formControlName="resp_asg">
-                <option disabled value="">Responsable ASG</option>
-                <option *ngFor="let usuario of usuarios">{{usuario.nombre}}</option>
-            </select>
+    <div *ngIf="!cambiar">
+        <h3 class="center">Partida</h3>
+        <form [formGroup]="partidaForm" (ngSubmit)="partidaSubmit()">
+            <div class="flex-container">
+                <div>
+                    <label class="control-label" for="fecha">Fecha: <span><i class="far fa-calendar-alt "></i></span> </label>
+                    <p #error id="error" *ngIf="submitted && f.fecha.invalid">*Este campo no puede ir vacío</p>
+                    <input class="form-control col-md-12" id="fecha" placeholder="Fecha" formControlName="fecha" type="date">
+                </div>
             </div>
             <div>
-                <label class="control-label mr-2" for="tipo_gasto">Tipo:</label><br>
-                <p #error id="error" *ngIf="submitted && fval.tipo.invalid">*Este campo no puede ir vacío</p>
-                <select id="tipo_gasto" formControlName="tipo">
-                    <option disabled value="">Tipo</option>
-                    <option value="Egreso">Egreso</option>
-                    <option value="Ingreso">Ingreso</option>
-                  </select>
+                <label class="control-label" for="monto">Monto: </label>
+                <input class="form-control col-md-12" id="monto" placeholder="Monto" formControlName="cantidad" type="number" data-toggle="tooltip" data-placement="top" title="*Campo obligatorio" (keyup)="checkNumerosP($event)" [ngClass]="{ 'is-invalid': submitted && f.cantidad.errors }">
+                <br/>
+            </div>
+            <div *ngIf="actualizar" class="center">
+                <button type="button" id="cancelar" class="btn btn-outline-danger mr-4" (click)="regresar()"><i class="fas fa-times"></i>
+Cancelar</button>
+                <button type="submit" id="eliminar" class="btn btn-outline-warning"><i class="fas fa-sync-alt"></i>
+Actualizar</button>
+            </div>
+            <button *ngIf="!actualizar" type="submit" id="guardar" class="col-md-5"><i class="fas fa-cloud-download-alt"></i>
+{{boton}}</button>
+        </form>
+    </div>
+
+    <div *ngIf="cambiar">
+        <h3 class="center">Partida</h3>
+        <form [formGroup]="ofForm" (ngSubmit)="onSubmit()">
+            <div class="flex-container">
+                <div>
+                    <label class="control-label" for="partida">Saldo disponible: </label><br>
+                    <div class="btn-group">
+                        <input disabled class="form-control col-md-6" id="partida" value="{{saldoDisp}}" type="text">
+                        <button class="btn btn-outline-info btn-sm" data-toggle="tooltip" data-placement="top" data-tooltip="Si hay un nuevo ingreso o no alcanza el saldo disponible puedes devolverlo y comenzar una nueva partida" type="button" (click)="devolver()">
+                            <i class="fa fa-reply-all" aria-hidden="true"></i>
+                            Devolver </button>
+                    </div>
+                </div>
+                <div>
+                    <label class="control-label" for="fecha">Fecha: <span><i class="far fa-calendar-alt "></i></span> </label>
+                    <p #error id="error" *ngIf="submitted && fval.fecha.invalid">*Este campo no puede ir vacío</p>
+                    <input class="form-control col-md-12" id="fecha" placeholder="Fecha" formControlName="fecha" type="date" min="{{partidaActual['fecha']}}">
+                </div>
             </div>
             <div>
-                <label class="control-label" for="fecha">Fecha: <span><i class="far fa-calendar-alt "></i></span> </label>
-                <p #error id="error" *ngIf="submitted && fval.fecha.invalid">*Este campo no puede ir vacío</p>
-                <input class="form-control col-md-12" id="fecha" placeholder="Fecha" formControlName="fecha" type="date">
+                <label class="control-label" for="monto">Monto: </label>
+                <input class="form-control col-md-12" id="monto" placeholder="Monto" formControlName="cantidad" type="number" min="1" data-toggle="tooltip" data-placement="top" title="*Campo obligatorio" (keyup)="checkNumerosP($event)" [ngClass]="{ 'is-invalid': submitted && fval.cantidad.errors }">
+                <br/>
+                <label class="control-label" for="descripcion">Motivo: </label>
+                <input class="form-control" id="motivo" placeholder="Motivo" formControlName="motivo" type="text" data-toggle="tooltip" data-placement="top" title="*Campo obligatorio" (keyup)="checkCaracteres($event)" [ngClass]="{ 'is-invalid': submitted && fval.motivo.errors }">
+                <br/>
             </div>
-        </div>
-        <div>
-            <label class="control-label" for="monto">Monto: </label>
-            <input class="form-control col-md-12" id="monto" placeholder="Monto" formControlName="cantidad" type="text" data-toggle="tooltip" data-placement="top" title="*Campo obligatorio" (keyup)="checkNumerosP($event)" [ngClass]="{ 'is-invalid': submitted && fval.cantidad.errors }">
-            <br/>
-            <label class="control-label" for="descripcion">Motivo: </label>
-            <input class="form-control" id="motivo" placeholder="Motivo" formControlName="motivo" type="text" data-toggle="tooltip" data-placement="top" title="*Campo obligatorio" (keyup)="checkCaracteres($event)" [ngClass]="{ 'is-invalid': submitted && fval.motivo.errors }">
-            <br/>
-        </div>
-        <div *ngIf="actualizar" class="center">
-            <button type="button" id="cancelar" class="btn btn-outline-danger mr-4" (click)="regresar()"><i class="fas fa-times"></i>
-                Cancelar</button>
-            <button type="submit" id="eliminar" class="btn btn-outline-warning"><i class="fas fa-sync-alt"></i>
-                    Actualizar</button>
-        </div>
-        <button *ngIf="!actualizar" type="submit" id="guardar" class="col-md-5"><i class="fas fa-cloud-download-alt"></i>
-        {{boton}}</button>
-    </form>
-</div>
+            <div *ngIf="actualizar" class="center">
+                <button type="button" id="cancelar" class="btn btn-outline-danger mr-4" (click)="regresar()"><i class="fas fa-times"></i>
+                            Cancelar</button>
+                <button type="submit" id="eliminar" class="btn btn-outline-warning"><i class="fas fa-sync-alt"></i>
+                            Actualizar</button>
+            </div>
+            <button *ngIf="!actualizar" type="submit" id="guardar" class="col-md-5"><i class="fas fa-cloud-download-alt"></i>
+                            {{boton}}</button>
+        </form>
+    </div>
