--- a/src/app/components/altas/usuarios/usuarios.component.html
+++ b/src/app/components/altas/usuarios/usuarios.component.html
@@ -8,7 +8,6 @@
                 <div class="col-md-3 mt-3">
                     <label class="control-label" for="ap_p">Apellido Paterno: </label>
                     <input class="form-control " id="ap_p" placeholder="Apellido Paterno" formControlName="ap_p" type="text" data-toggle="tooltip " title="*Campo obligatorio " (keyup)="checkLetras($event) " [ngClass]="{ 'is-invalid': submitted && fval.ap_p.errors }">
-
                 </div>
                 <div class="col-md-3 mt-3">
                     <label class="control-label" for="ap_m">Apellido Materno: </label>
@@ -18,7 +17,6 @@
                 <div class="col-md-3 mt-3">
                     <label class="control-label" for="nombre">Nombre(s): </label>
                     <input class="form-control " id="nombre" placeholder="Nombre(s)" formControlName="nombre" type="text" data-toggle="tooltip " title="*Campo obligatorio " (keyup)="checkLetras($event) " [ngClass]="{ 'is-invalid': submitted && fval.nombre.errors }">
-
                 </div>
             </div>
             <div class="around">
@@ -29,7 +27,7 @@
                 </div>
                 <div class="col-md-3 mt-3">
                     <label class="control-label" for="password">Contraseña: </label>
-                    <input class="form-control " id="password" placeholder="Contraseña" formControlName="password" type="text" data-toggle="tooltip " title="*Campo obligatorio " [ngClass]="{ 'is-invalid': submitted && fval.password.errors }">
+                    <input class="form-control" minlength="6" id="password" placeholder="Contraseña" formControlName="password" type="text" data-toggle="tooltip " title="*Min 6 caracteres " [ngClass]="{ 'is-invalid': submitted && fval.password.errors }">
                 </div>
                 <div class="col-md-3 mt-3">
                     <label class="control-label" for="resp_area">Personal a su cargo: </label><br>
@@ -38,7 +36,6 @@
                         <span class="slider round"></span>
                       </label>
                 </div>
-
             </div>
             <div class="around">
                 <div class="col-md-3 mt-3">
@@ -57,9 +54,28 @@
                     </select>
                     <p *ngIf="submitted && fval.area.invalid">*Este campo no puede ir vacío</p>
                 </div>
+            </div>
+            <div class="around">
+                <div class="col-md-3 mt-3">
+                    <label class="control-label" for="rol">Rol: </label><br>
+                    <select id="rol" formControlName="rol" data-toggle="tooltip" data-placement="top" title="*Campo obligatorio ">
+                        <option value=''>Rol</option>
+                        <option value="Usuario">USUARIO</option>
+                        <option value="Administrador">ADMINISTRADOR</option>
+                        <option value="Tesorero">TESORERO</option>
+                    </select>
+                    <p *ngIf="submitted && fval.area.invalid">*Este campo no puede ir vacío</p>
+                </div>
                 <div class="col-md-3 mt-3">
                     <label class="control-label" for="puesto">Puesto: </label>
                     <input class="form-control" id="puesto" placeholder="Puesto" formControlName="puesto" type="text" data-toggle="tooltip " title="*Campo obligatorio " (keyup)="checkLetras($event) " [ngClass]="{ 'is-invalid': submitted && fval.puesto.errors }">
+                </div>
+                <div *ngIf="admin && activado === false" class="col-md-3 mt-3">
+                    <label class="control-label" for="activo">Activo: </label><br>
+                    <label class="switch">
+                        <input type="checkbox" formControlName="activo">
+                        <span class="slider round"></span>
+                      </label>
                 </div>
             </div>
             <br>
@@ -69,6 +85,7 @@
                 <button type="submit" id="eliminar" class="btn btn-outline-warning"><i class="fas fa-sync-alt"></i>
                         Actualizar</button>
             </div>
+
 
             <div class="center">
                 <button #guardar *ngIf="!actualizar" type="submit" id="guardar" class="col-md-5"><i class="fas fa-cloud-download-alt"></i>
