--- a/src/app/components/registros/inv-oficina/inv-oficina.component.html
+++ b/src/app/components/registros/inv-oficina/inv-oficina.component.html
@@ -14,7 +14,7 @@
             <tr *ngFor="let el of elements; let i of index">
                 <td>{{el.resp_asg}}</td>
                 <td>{{el.fecha}}</td>
-                <td>{{el.tipo}}</td>
+                <td>{{el.id_partida}}</td>
                 <td style="text-align: right;">{{el.cantidad | currency }}</td>
                 <td>{{el.motivo}}</td>
                 <td>
