--- a/src/app/components/registros/inv-reembolso/inv-reembolso.component.html
+++ b/src/app/components/registros/inv-reembolso/inv-reembolso.component.html
@@ -1,1 +1,47 @@
-<p>inv-reembolso works!</p>
+<navbar></navbar>
+<h1>Registro {{titulo}}</h1>
+<div class="loading" *ngIf="loading">Loading&#8230;</div>
+<div id="tabla">
+    <table class="table">
+        <thead>
+            <tr>
+                <th *ngFor="let head of headTitle">{{head}}</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let el of elements; let i of index">
+                <td>{{el.solicitante}}</td>
+                <td>{{el.fecha}}</td>
+                <td style="text-align: right;">{{el.cantidad | currency }}</td>
+                <td>{{el.motivo}}</td>
+                <td>{{el.estatus}}</td>
+                <td>
+                    <button class="btn btn-outline-info btn-sm" data-toggle="modal" data-target="#comprobante"> Ver comprobantes ...
+                    <div #comprobante id="comprobante" class="modal fade">
+                        <div class="modal-dialog modal-lg">
+                            <!-- Modal content-->
+                            <div class="modal-content">
+                                <div class="modal-body" >
+                                       <img class="zoom m-2" *ngFor="let imagen of comprobantes" [src]="imagen">
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
+</div>
+</div>
+</div>
+</div>
+</button>
+
+</td>
+<td>
+    <button type="button" class="btn btn-outline-success mr-2 btn-sm" (click)="actualizar(i)"><i class="fas fa-edit"></i> Modificar</button>
+    <button type="button" class="btn btn-outline-danger btn-sm" (click)="borrar(i)"> <i class="fas fa-trash-alt"></i> Eliminar</button>
+</td>
+</tr>
+
+</tbody>
+</table>
+
+
+
+</div>
