--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,19 +1,16 @@
-.hidden-sn main {
-    background: url('/assets/img/fondoazul.jpg'), no-repeat center center;
-    background-size: cover;
-}
-
-.intro-2 {
-    background: url('/assets/img/fondoazul.jpg'), no-repeat center center;
+.fondo {
+    background: url('/assets/img/fondogris.jpg'), no-repeat center center;
     background-size: cover;
 }
 
 .card {
-    background-color: rgba(255, 255, 255, 0.85);
-}
-
-.md-form label {
-    color: #757575;
+    background-color: rgba(252, 252, 252, 0.521);
+    border-radius: 1.5%;
+    margin-right: 5%;
+    margin-left: 5%;
+    color: #202C4C;
+    padding: 20px;
+    margin-top: 45px;
 }
 
 .md-form .prefix {
@@ -21,11 +18,38 @@
     margin-top: 1rem;
 }
 
-.dark-grey-text {
-    color: #4f4f4f !important;
-}
-
 .intro {
     min-height: 100vh;
     position: relative;
+}
+
+div#formulario1,
+div#formulario {
+    width: 90%;
+    margin: 5%;
+}
+
+label {
+    color: white;
+}
+
+img {
+    width: 200px;
+    height: 110px;
+}
+
+strong#footer {
+    color: #202C4C;
+    position: absolute;
+    bottom: 2px;
+}
+
+form {
+    color: white;
+    background: url('/assets/img/fondoazul.jpg'), no-repeat center center;
+    width: 400px;
+    padding: 3px;
+    padding-bottom: 15px;
+    padding-top: 20px;
+    margin-bottom: 30px;
 }
