--- a/src/app/components/altas/clientes/clientes.component.html
+++ b/src/app/components/altas/clientes/clientes.component.html
@@ -63,14 +63,14 @@
                     <input #nombre_area class="form-control" id="nombre_area" placeholder="Nombre" formControlName="nombre_area" data-toggle="tooltip" data-placement="top" title="*Campo obligatorio" (keyup)="checkLetras($event)" [ngClass]="{ 'is-invalid': submitted && f.nombre_area.errors }">
                     <br>
                     <div *ngIf="actualizar" class="center">
-                        <button type="button" id="cancelar" class="btn btn-outline-danger mr-4" (click)="backArea()"><i class="fas fa-times"></i>
+                        <button type="button" id="cancelar" class="btn btn-outline-danger mr-4" (click)="backArea()"><i class=" mr-3 fas fa-times"></i>
                             Cancelar</button>
-                        <button type="submit" id="actualizar" class="btn btn-outline-warning"><i class="fas fa-sync-alt"></i>
+                        <button type="submit" id="actualizar" class="btn btn-outline-warning"><i class=" mr-3 fas fa-sync-alt"></i>
                                 Actualizar</button>
                     </div>
 
                     <div class="center">
-                        <button #guardar *ngIf="!actualizar" type="submit" id="guardar" class="col-md-5"><i class="fas fa-cloud-download-alt"></i>
+                        <button #guardar *ngIf="!actualizar" type="submit" id="guardar" class="col-md-5"><i class=" mr-3  fas fa-cloud-download-alt"></i>
                             {{boton}}</button>
                     </div>
                 </form>
@@ -87,8 +87,8 @@
                         <tr *ngFor="let el of areas; let i of index">
                             <td class="left">{{el.nombre_area}}</td>
                             <td class="center">
-                                <button type="button" class="btn btn-outline-success mr-2 btn-sm" (click)="actualizar_area(i)"><i class="fas fa-edit"></i> Modificar</button>
-                                <button type="button" class="btn btn-outline-danger btn-sm" (click)="borrar(i)"> <i class="fas fa-trash-alt"></i> Eliminar</button>
+                                <button type="button" class="btn btn-outline-success mr-2 btn-sm" (click)="actualizar_area(i)"><i class=" mr-3 fas fa-edit"></i> Modificar</button>
+                                <button type="button" class="btn btn-outline-danger btn-sm" (click)="borrar(i)"> <i class="mr-3  fas fa-trash-alt"></i> Eliminar</button>
                             </td>
                         </tr>
                     </tbody>
