--- a/src/app/components/altas/gastos-generales/gastos-generales.component.html
+++ b/src/app/components/altas/gastos-generales/gastos-generales.component.html
@@ -60,7 +60,7 @@
                 </div>
 
             </div>
-            <div class="mt-5 between">
+            <div *ngIf="!id_gasto" class="mt-5 between">
                 <div *ngIf="(archivos.length <=  2 )" class="drop-img mt-3 col-md-5">
                     <div appNgDropFiles [archivos]="archivos" (mouseSobre)="estaSobreElemento = $event; cargarArchivos();" [ngClass]="{ 'file-over': estaSobreElemento }" class="well drop-zone">
                         <h4>Arrastrar archivos</h4>
@@ -93,14 +93,14 @@
             </div>
             <br>
             <div *ngIf="actualizar" class="center mt-3">
-                <button type="button" id="cancelar" class="btn btn-outline-danger mr-4" (click)="regresar()"><i class="fas fa-times"></i>
+                <button type="button" id="cancelar" class="btn btn-outline-danger mr-4" (click)="regresar()"><i class="mr-3 fas fa-times"></i>
                     Cancelar</button>
-                <button type="submit" id="eliminar" class="btn btn-outline-warning"><i class="fas fa-sync-alt"></i>
+                <button type="submit" id="eliminar" class="btn btn-outline-warning"><i class="mr-3 fas fa-sync-alt"></i>
                         Actualizar</button>
             </div>
 
             <div class="center mt-3">
-                <button #guardar *ngIf="!actualizar" type="submit" id="guardar" class="col-md-5"><i class="fas fa-cloud-download-alt"></i>
+                <button #guardar *ngIf="!actualizar" type="submit" id="guardar" class="col-md-5"><i class="mr-3  fas fa-cloud-download-alt"></i>
                     {{boton}}</button>
             </div>
         </form>
