--- a/src/app/components/altas/usuarios/usuarios.component.html
+++ b/src/app/components/altas/usuarios/usuarios.component.html
@@ -23,7 +23,7 @@
                 <div class="col-md-3 mt-3">
                     <label class="control-label" for="correo">Correo: </label>
                     <input class="form-control " id="correo" placeholder="Correo" formControlName="correo" type="email" data-toggle="tooltip " title="*Campo obligatorio" [ngClass]="{ 'is-invalid': submitted && fval.correo.errors }">
-                    <p class="error" *ngIf="userForm.get('correo').hasError('email')">*Correo Invalido</p>
+                    <p id="error" class="error" *ngIf="userForm.get('correo').hasError('email')">*Correo Invalido</p>
                 </div>
                 <div class="col-md-3 mt-3">
                     <label class="control-label" for="password">Contraseña: </label>
@@ -44,7 +44,7 @@
                      <option disabled value=''>Jefe inmediato</option> 
                      <option *ngFor="let resp of usuarios">{{resp.nombre}}</option> 
                      </select>
-                    <p *ngIf="submitted && fval.resp_asg.invalid">*Este campo no puede ir vacío</p>
+                    <p id="error" *ngIf="submitted && fval.resp_asg.invalid">*Este campo no puede ir vacío</p>
                 </div>
                 <div class="col-md-3 mt-3">
                     <label class="control-label" for="area">Área: </label><br>
@@ -52,19 +52,20 @@
                         <option disabled value=''>Área</option>
                         <option *ngFor="let area of areas ">{{area.nombre_area}}</option>
                     </select>
-                    <p *ngIf="submitted && fval.area.invalid">*Este campo no puede ir vacío</p>
+                    <p id="error" *ngIf="submitted && fval.area.invalid">*Este campo no puede ir vacío</p>
                 </div>
             </div>
             <div class="around">
-                <div class="col-md-3 mt-3">
+                <div *ngIf="admin" class="col-md-3 mt-3">
                     <label class="control-label" for="rol">Rol: </label><br>
                     <select id="rol" formControlName="rol" data-toggle="tooltip" data-placement="top" title="*Campo obligatorio ">
-                        <option value=''>Rol</option>
+                        <option value='Usuario'>Rol</option>
                         <option value="Usuario">USUARIO</option>
                         <option value="Administrador">ADMINISTRADOR</option>
                         <option value="Tesorero">TESORERO</option>
+                        <option value="Aprobador">APROBADOR</option>
                     </select>
-                    <p *ngIf="submitted && fval.area.invalid">*Este campo no puede ir vacío</p>
+                    <p id="error" *ngIf="submitted && fval.area.invalid">*Este campo no puede ir vacío</p>
                 </div>
                 <div class="col-md-3 mt-3">
                     <label class="control-label" for="puesto">Puesto: </label>
@@ -80,15 +81,15 @@
             </div>
             <br>
             <div *ngIf="actualizar" class="center">
-                <button type="button" id="cancelar" class="btn btn-outline-danger mr-4" (click)="regresar()"><i class="fas fa-times"></i>
+                <button type="button" id="cancelar" class="btn btn-outline-danger mr-4" (click)="regresar()"><i class="  mr-3  fas fa-times"></i>
                     Cancelar</button>
-                <button type="submit" id="eliminar" class="btn btn-outline-warning"><i class="fas fa-sync-alt"></i>
+                <button type="submit" id="eliminar" class="btn btn-outline-warning"><i class="  mr-3 fas fa-sync-alt"></i>
                         Actualizar</button>
             </div>
 
 
             <div class="center">
-                <button #guardar *ngIf="!actualizar" type="submit" id="guardar" class="col-md-5"><i class="fas fa-cloud-download-alt"></i>
+                <button #guardar *ngIf="!actualizar" type="submit" id="guardar" class="col-md-5"><i class=" mr-3 fas fa-cloud-download-alt"></i>
                     {{boton}}</button>
             </div>
         </form>
