--- a/src/app/components/registros/inv-reembolso/inv-reembolso.component.html
+++ b/src/app/components/registros/inv-reembolso/inv-reembolso.component.html
@@ -16,13 +16,13 @@
                 <td>{{el.motivo}}</td>
                 <td>{{el.estatus}}</td>
                 <td>
-                    <button class="btn btn-outline-info btn-sm" data-toggle="modal" data-target="#comprobante"> Ver comprobantes ...
-                    <div #comprobante id="comprobante" class="modal fade">
+                    <button class="btn btn-outline-info btn-sm" data-toggle="modal" [attr.data-target]="'#'+el.id_reembolso"> Ver comprobantes ...
+                    <div [attr.id]="el.id_reembolso" class="modal fade">
                         <div class="modal-dialog modal-lg">
                             <!-- Modal content-->
                             <div class="modal-content">
                                 <div class="modal-body" >
-                                       <img class="zoom m-2" *ngFor="let imagen of comprobantes" [src]="imagen">
+                                       <img class="zoom m-2" *ngFor="let imagen of el.arrComprobantes" [src]="imagen">
                                 </div>
                                 <div class="modal-footer">
                                     <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
@@ -31,7 +31,6 @@
 </div>
 </div>
 </button>
-
 </td>
 <td>
     <button type="button" class="btn btn-outline-success mr-2 btn-sm" (click)="actualizar(i)"><i class="fas fa-edit"></i> Modificar</button>
